--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head >
 	<a href="web/index.html">if doesn't work press here</a>
-	<script src="redir.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.54.0/phaser.min.js"></script>
+<script src="redir.js"></script>
 	<script>
 		window.addEventListener('load',loadEvents);
 	</script>
