--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,8 @@
 
 	<div id="gameBorder">
 		<div id="game">
-			<script type="module" src="js/game.js"></script>
+			<!--<script type="module" src="js/mapas/lab.js"></script>-->
+			<script type="module" src="js/sceneConstructor.js"></script>
 		</div>
 	</div>
 
